<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Enter your username</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome %1$s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_welcome_msg">Welcome Back Foodie !</string>
    <string name="login_cred_hint">Enter Your Credentials To Continue</string>
    <string name="login_remember_me">Remember me</string>
    <string name="button_login">Login</string>
    <string name="login_button_register">Oops..!!! Don\'t have an account yet</string>
    <string name="login_troubleLoginIn">Trouble Logging In ?</string>
    <string name="splash_title_1">Yo</string>
    <string name="splash_title_2">Foodies</string>
</resources>